Refactor head-line as headline

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <img id="head-image" src="head-image.png">
         </div>
         <div id="headlines-container">
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
-            <div class="head-line-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
+            <div class="headline-box"><textarea></textarea></div>
         </div>
     </div>
     <div id="edit-button-container">
