Impl add / remove headline func

--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
             <div class="headline-box"><textarea></textarea></div>
             <div class="headline-box"><textarea></textarea></div>
             <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
         </div>
     </div>
     <div id="edit-button-container">
-        <div id="add-button" class="edit-button">+</div>
-        <div id="remove-button" class="edit-button">-</div>
+        <div class="edit-button" onclick="addHeadline()">+</div>
+        <div class="edit-button" onclick="removeHeadline()">-</div>
     </div>
 </body>
 
