--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <div id="head-image-container">
+        <div id="head-image-container" class="opacity-0">
             <img id="head-image" src="head-image.png">
         </div>
         <div id="headlines-container">
@@ -25,6 +25,8 @@
     <div id="edit-button-container">
         <div class="edit-button" onclick="addHeadline()">+</div>
         <div class="edit-button" onclick="removeHeadline()">-</div>
+        <div class="edit-button" onclick="rewind()">⏮</div>
+        <div class="edit-button" onclick="start()">▶</div>
     </div>
 </body>
 
