Impl textarea height update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <div id="head-image-container" class="opacity-0">
             <img id="head-image" src="head-image.png">
         </div>
-        <div id="headlines-container">
-            <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
-            <div class="headline-box"><textarea></textarea></div>
-        </div>
+        <div id="headlines-container"></div>
     </div>
     <div id="edit-button-container">
         <div class="edit-button" onclick="addHeadline()">+</div>
