--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div id="head-image-container" class="opacity-0">
             <img id="head-image" src="head-image.png">
         </div>
-        <div id="headlines-container"></div>
+        <div id="headlines-perse-container">
+            <div id="headlines-container"></div>
+        </div>
     </div>
     <div id="edit-button-container">
         <div class="edit-button" onclick="addHeadline()">+</div>
