Update design to fit the OBS layout

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
     </div>
     <div id="edit-button-container">
+        <div class="edit-button" onclick="editMode()" id="edit-mode-indicator">Edit Mode</div>
         <div class="edit-button" onclick="addHeadline()">+</div>
         <div class="edit-button" onclick="removeHeadline()">-</div>
         <div class="edit-button" onclick="rewind()">⏮</div>
