Refactor rewind() to reset()

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="edit-button" onclick="editMode()" id="edit-mode-indicator">Edit Mode</div>
         <div class="edit-button" onclick="addHeadline()">+</div>
         <div class="edit-button" onclick="removeHeadline()">-</div>
-        <div class="edit-button" onclick="rewind()">⏮</div>
+        <div class="edit-button" onclick="reset()">⏮</div>
         <div class="edit-button" onclick="start()">▶</div>
     </div>
 </body>
