--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="edit-button-container">
         <div class="edit-button" onclick="editMode()" id="edit-mode-indicator">Edit Mode</div>
-        <div class="edit-button" onclick="addHeadline()">+</div>
+        <div class="edit-button" onclick='addHeadline("")'>+</div>
         <div class="edit-button" onclick="removeHeadline()">-</div>
         <div class="edit-button" onclick="reset()">⏮</div>
         <div class="edit-button" onclick="start()">▶</div>
