Remove GUI buttons and emphasize Edit Mode Indicator

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
             <div id="headlines-container"></div>
         </div>
     </div>
-    <div id="edit-button-container">
-        <div class="edit-button" onclick="editMode()" id="edit-mode-indicator">Edit Mode</div>
-        <div class="edit-button" onclick='addHeadline("")'>+</div>
-        <div class="edit-button" onclick="removeHeadline()">-</div>
-        <div class="edit-button" onclick="reset()">⏮</div>
-        <div class="edit-button" onclick="start()">▶</div>
+    <div id="edit-label-container">
+        <div id="edit-mode-indicator">Edit Mode</div>
     </div>
 </body>
 
